--- a/gb/21/10/30/n13340232.md
+++ b/gb/21/10/30/n13340232.md
@@ -1,30 +1,30 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhezea392/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nhezea392/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nhezea392/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nhezea392/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nhezea392/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nhezea392/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nhezea392/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>强制令执行前夕 工会警告纽约即将陷入“灾难”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13340234-153516-600x400.png" />
 <h6>10月29日下午5点消防局工会遗憾地表示，市政府还没有推迟对消防员的强制疫苗政策执行时间，工会警告后果严重。（施萍／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年10月30日讯】（大纪元记者施萍<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）10月29日下午4半点，在纽约市即将对市政府各部门员工执行<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E7%96%AB%E8%8B%97.md#1">强制疫苗</a>政策的最后一刻，市政府仍然保持强硬态度，没有给纽约市消防员工会任何和谈信息。工会召开记者会，警告纽约市下周将要面临的危险。如果纽约市民下周家中失火或者有人突发心脏病了，只能自求多福了，因为<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80.md#1">消防局</a>没有往常那么多的人去救人救火了。</p>
-<p>“现在他们（工会成员）都陷入了困境。我们不知道将会发生什么，我们不知道<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80.md#1">消防局</a>作为一个团队，周一谁会来消防站上班？”拥有2万成员的“制服消防员工会”（Uniformed Firefighters Association）主席安斯布罗（Andrew Ansbro）在记者会上说。</p>
-<p>上周10月20日，市长白思豪宣布，截止到10月29日最后一天，全市16万名城市工人和公职人员必须施打COVID-19（中共病毒）疫苗，否则将被无限期无薪放假，等于“不打疫苗就失业”，即实施“<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E7%96%AB%E8%8B%97.md#1">强制疫苗</a>”政策。</p>
+	<p>【大纪元2021年10月30日讯】（大纪元记者施萍<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）10月29日下午4半点，在纽约市即将对市政府各部门员工执行<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E7%96%AB%E8%8B%97.md#1">强制疫苗</a>政策的最后一刻，市政府仍然保持强硬态度，没有给纽约市消防员工会任何和谈信息。工会召开记者会，警告纽约市下周将要面临的危险。如果纽约市民下周家中失火或者有人突发心脏病了，只能自求多福了，因为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80.md#1">消防局</a>没有往常那么多的人去救人救火了。</p>
+<p>“现在他们（工会成员）都陷入了困境。我们不知道将会发生什么，我们不知道<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E5%B1%80.md#1">消防局</a>作为一个团队，周一谁会来消防站上班？”拥有2万成员的“制服消防员工会”（Uniformed Firefighters Association）主席安斯布罗（Andrew Ansbro）在记者会上说。</p>
+<p>上周10月20日，市长白思豪宣布，截止到10月29日最后一天，全市16万名城市工人和公职人员必须施打COVID-19（中共病毒）疫苗，否则将被无限期无薪放假，等于“不打疫苗就失业”，即实施“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E7%96%AB%E8%8B%97.md#1">强制疫苗</a>”政策。</p>
 <h2>急救人员减少导致反应时间延长怎么办？</h2>
-<p><ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E4%BB%A4.md#1">强制令</a>公布后，消防员工会一直试图与市政府协商，他们只不过想推迟最后实行强制令的时间，但是就这一点要求都没有实现。目前消防局还有40%以上的人没有打疫苗，如果周一这些人不来上班的话，<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>人家中失火怎么办？</p>
-<figure id="attachment_13343485" aria-describedby="caption-attachment-13343485" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13343485-97004867-6C19-4ED1-84BF-90A966DD1971.jpg"><img class="size-large wp-image-13343485" src="https://i.epochtimes.com/assets/uploads/2021/10/id13343485-97004867-6C19-4ED1-84BF-90A966DD1971-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13343485" class="wp-caption-text">一直到纽约市对市政府志工的疫苗<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E4%BB%A4.md#1">强制令</a>开始的最后一个周末，消防工会都没有能够延长执行期限，工会警告后果会很严重。（施萍/大纪元）</figcaption></figure>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E4%BB%A4.md#1">强制令</a>公布后，消防员工会一直试图与市政府协商，他们只不过想推迟最后实行强制令的时间，但是就这一点要求都没有实现。目前消防局还有40%以上的人没有打疫苗，如果周一这些人不来上班的话，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>人家中失火怎么办？</p>
+<figure id="attachment_13343485" aria-describedby="caption-attachment-13343485" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13343485-97004867-6C19-4ED1-84BF-90A966DD1971.jpg"><img class="size-large wp-image-13343485" src="https://i.epochtimes.com/assets/uploads/2021/10/id13343485-97004867-6C19-4ED1-84BF-90A966DD1971-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13343485" class="wp-caption-text">一直到纽约市对市政府志工的疫苗<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BC%BA%E5%88%B6%E4%BB%A4.md#1">强制令</a>开始的最后一个周末，消防工会都没有能够延长执行期限，工会警告后果会很严重。（施萍/大纪元）</figcaption></figure>
 <p>“是的，你会看到越来越少的消防站应付火警，消防员工作更长的时间，我们将不可避免地有更多的消防员受伤或者生病。”安斯布罗说，“这一周来我一直在为纽约人呼吁，（强制令）将影响他们（工会成员）的生活，这也将影响我们（所有纽约人）的生活和安全。”</p>
 <p>他重复着昨天在市长家门前集会上的话说，市消防局本来就人员紧张，而纽约市每天发生64起火灾（仅昨日和今日就发生了两起重大火灾）；每日1400次医疗急救事件，其中80件心脏病发作病例。如果消防局人力减少30%到40%，纽约市民的生命和财产安全都要受到威胁。</p>
 <p>安斯布罗对大纪元表示，从有人打911报告火警到消防员赶到现场这段“反应时间”，去年的平均值为4到5分钟。那么如果减少40%人力的话，那么反应时间是不是就要延长到7、8分钟？“太有可能了。”他回答说。</p>
 <p>工会副主席尤斯泰斯（Bobby Eustace）也对记者说，反应时间加长真的是“太危险了”。</p>
 <h2>强制政策影响到每一个纽约人</h2>
-<p>自从市长的强迫打疫苗行政令下达以来，纽约市人民进行了各种形式的抵制：从25日的数万<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%85%AC%E5%8A%A1%E5%91%98.md#1">公务员</a>布碌崙桥大游行，到在市长官邸门前集会示威，再到包括消防、警察工会以及教师们个人到法庭上的告状，不一而足。并且从上周六开始，全市五大区都出现了垃圾无人收的现象，有人在推特上透露，这是环卫工人用行动在抵制强制政策。</p>
+<p>自从市长的强迫打疫苗行政令下达以来，纽约市人民进行了各种形式的抵制：从25日的数万<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%8A%A1%E5%91%98.md#1">公务员</a>布碌崙桥大游行，到在市长官邸门前集会示威，再到包括消防、警察工会以及教师们个人到法庭上的告状，不一而足。并且从上周六开始，全市五大区都出现了垃圾无人收的现象，有人在推特上透露，这是环卫工人用行动在抵制强制政策。</p>
 <p>一个名叫“随机垃圾工”（RandomGarbageMan）的人在26日的推特上写道：“最新消息，全市5个区有709车垃圾没人收。布碌崙有204处。我能看见数字但是不能公开贴出来。让他们说只有史坦顿岛吧。每批垃圾平均10吨，日平均10K1/2。”</p>
 <p>根据本报前一天报导，布碌崙华人社区和华埠都看到门前的垃圾无人收。记者看到，曼哈顿哈林区也有很多楼门前的垃圾滞留了一周时间没人收。</p>
 <p>“我还说怎么这周的垃圾一直在这里？原来是清洁工抵制强制疫苗。”一位隋先生说，“这不是影响到我们每个人的生活了吗？真想像不到下周的纽约会变成什么样。”</p>
 <p>对于老师来说，29日是允许他们“自愿提出辞职”的最后期限。如果他们想保住自己一年的医疗保险，以及以前积攒的事假病假的话，就要放弃今后起诉纽约市教育局的权利。很多坚持医疗自由的教师宁可放弃福利也要保留自己的起诉权，这些人正在等待法庭的消息。</p>
 <p>但是28日，教师们的一个紧急诉求，即对市政府的强制疫苗令发出一个“临时限制令”（Temporary Restraining Order）的要求被法官驳回了，教师们立即把案子上诉到了美国第二巡回法庭。</p>
 <p>“因为我们已经一个月没有收入了，很多人的家庭生活现在面临非常大、非常大的困难。”教育局员工、法拉盛一公校老师孙苏珊对大纪元说，有人没有钱给宠物治病而导致小狗去世；有的老师交不起房租；还有付不起房贷的；“我非常理解，很多人的精神压力非常大，因为政府的强制，有人真的到了精神崩溃的边缘……”</p>
-<figure id="13340235" aria-describedby="caption-13340235" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13340235-153517-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13340235-153517-450x338.jpg" alt="教育局老师孙苏珊呼吁纽约市民对公务员的境遇关注起来，因为强制令会影响到每一个市民。" width="500" /></a><figcaption id="caption-13340235" class="wp-caption-text">教育局老师孙苏珊呼吁纽约市民对<ahref="https://github.com/nhezea392/djy/blob/master/gb/tag/%E5%85%AC%E5%8A%A1%E5%91%98.md#1">公务员</a>的境遇关注起来，因为强制令会影响到每一个市民。（施萍／大纪元）</figcaption></figure>
+<figure id="13340235" aria-describedby="caption-13340235" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13340235-153517-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13340235-153517-450x338.jpg" alt="教育局老师孙苏珊呼吁纽约市民对公务员的境遇关注起来，因为强制令会影响到每一个市民。" width="500" /></a><figcaption id="caption-13340235" class="wp-caption-text">教育局老师孙苏珊呼吁纽约市民对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E5%8A%A1%E5%91%98.md#1">公务员</a>的境遇关注起来，因为强制令会影响到每一个市民。（施萍／大纪元）</figcaption></figure>
 <p>孙老师28日参加了消防员在市长官邸前的抗议集会，她希望全社会对市政府人员面临的困境关注起来。</p>
 <p>“因为我们的境遇实际上会影响到每一个生活在纽约市的人民，你无法想像在接下来的一段日子里，如果警察、消防人员、环卫清扫人员因反对强制而选择罢工的话，请问大家你的垃圾谁来收？你的房子着火谁来给你灭火？你遇到了危险，警察在哪里？但是他们都将被解雇，所以整个城市将会瘫痪，这是大家都要面临的一个严重的、严峻的生活问题。”</p>
 <p>孙老师说，目前越来越多的教师加入了状告市政府的原告名单上，她估计今后各行各业中要求医疗自由的市民也会逐渐联合起来。</p>
@@ -35,41 +35,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/21/10/24/n13326937.md#1">【疫情简报10.25】受制强制疫苗令 新州面临教师短缺</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/21/10/26/n13329881.md#1">纽约市公务员万人大游行 抗议强制疫苗令</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/21/10/28/n13335072.md#1">消防员工会：强制疫苗令将关闭全市3、4成消防站</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/21/10/28/n13336960.md#1">秘录视频曝光遭抨击 墨菲否认将推行强制疫苗接种</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/24/n13326937.md#1">【疫情简报10.25】受制强制疫苗令 新州面临教师短缺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/26/n13329881.md#1">纽约市公务员万人大游行 抗议强制疫苗令</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/28/n13335072.md#1">消防员工会：强制疫苗令将关闭全市3、4成消防站</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/28/n13336960.md#1">秘录视频曝光遭抨击 墨菲否认将推行强制疫苗接种</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11365941.md#1" target="_blank">【专访】澳参议员：制裁中共 不做迫害同谋</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/10/n13635669.md#1">【人生之钥】遭遇强盗 十五六岁女孩失足落水后的命运</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13646343.md#1">【远见快评】双重危机夹击 中共转折末路到来？</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13645328.md#1">【新闻大家谈】中国多地封城 疫苗副作用曝光</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13643964.md#1">【未解之谜】穿越长城 是功能还是魔术？</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/12/n13641821.md#1">哈佛营养学家：六类健脑食物 多数人吃得不够</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/12/n13641892.md#1">【一线采访】上海疫情严重 政府人员集体感染</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13643800.md#1">沈舟：乌克兰步兵打坦克 电影变现实</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13644401.md#1">金钟视帝唐川昨晚病逝 享寿69岁</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13643619.md#1">自曝曾因长相遭攻击 姚晨如今回应幽默而霸气</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13642984.md#1">曾见证大S具俊晔交往 黄子佼佩服男方这一点</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/12/n13640388.md#1">《超时空亚当计划》影评：巧遇未来的自己 成冒险开端</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/13/n13643780.md#1">艾美奖入围导演遭俄军袭击身亡 享年50岁</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/9/n13634214.md#1">头发可以天天洗吗？洗头三大误区一定要知道</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/12/n13640276.md#1">36岁朱芯仪罹乳癌 一种风险最易被轻忽</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/10/n13636807.md#1">皮肤保养不好 当心变老甚至罹癌！教你保护方法</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/10/n13637128.md#1">草莓营养价值高 但有这些症状的人不可多吃</a></li>
-<li><a href="https://github.com/nhezea392/djy/blob/master/gb/22/3/14/n13644865.md#1">美联储即将加息 为何影响潜在购房者？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nhezea392/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nhezea392/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/30/n13340232.htm">强制令执行前夕 工会警告纽约即将陷入“灾难”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/30/n13340232.htm">强制令执行前夕 工会警告纽约即将陷入“灾难”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nhezea392/djy/blob/master/gb/21/10/30/n13340232.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nhezea392/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nhezea392/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhezea392/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhezea392/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nhezea392/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13340232.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
